Run single array tag dacapo on travis